Responsive: tittle container always in the middle of the page, fixed collapse login menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,10 @@ body {
     margin-right: 1em;
 }
 
+.btn-primary {
+    float: right;
+}
+
 #nav-style {
     z-index: 99;
 }
@@ -30,20 +34,25 @@ body {
 
 .dropdown-menu.show {
     padding: 10px;
-    width: 115%;
+    width: 105%;
 }
+
 
 .container {
     width: 960px;
-}
-.container {
-   display: flex;
-   justify-content: center;
-   margin-top: 17%;
+    display: flex;
+    justify-content: center;
+    margin-top: 17%;
     color: white;
     text-shadow: rgb(77, 73, 73) 0px 0px 5px, rgb(97, 97, 97) 0px 0px 10px, rgb(87, 84, 84) 0px 0px 15px, 
     rgb(255, 251, 45) 0px 0px 20px, rgb(0, 81, 156) 0px 0px 30px;
 }
+
+p {
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+
 #search-box {
     width: 73%;
 }
@@ -87,3 +96,25 @@ body {
 .navbar-light:hover .navbar-nav:hover .nav-link:hover {
     color: rgba(160, 123, 0, 0.9);
 }
+/* ==============MOBILE RESPONSIVE===================== */
+/* When the screen hit max-width 576px */
+@media (max-width: 576px) {
+    /* log in form show */
+    .dropdown-menu.show {
+        width: 100%;
+    }
+    
+    /* tittle container */
+    .container {
+        width: 90%;
+        display: flex;
+        justify-content: center;
+        margin-top: 50%;
+    }
+    #search-box{
+        width: 73%;
+        margin-right: 5px;
+    }
+    
+
+ }
